--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,41 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header-image {
+  background-image: url('https://imgur.com/H5cS4BC.jpg');
+  height: 350px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  position: center;
+  font-size: 80px;
+  opacity: 0.8;
+  box-shadow: 0 0 10px 10px white inset;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-container {
+  display: flex;
+  justify-content: center;
+}
+
+.list {
+  flex-direction: column;
+  font-size: 15px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+  position: relative;
+}
+.footer-img {
+  border-radius: 50%;
+  margin: 20px;
+  padding: 20px;
 }
